--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -15,48 +15,8 @@
     </nav>
 
     <div class="featured">
-        <h1>Popular:</h1>
-        <div class="column">
-          <a href="games/bob-the-robber-2/">
-            <img src="images/bob-the-robber-2.png">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-          </a>
-          <a href="games/vex7/">
-            <img src="images/vex7.jpeg">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-          </a>
-        </div>
-        <div class="row">
-          <a href="games/vex6">
-            <img src="images/vex6.jpeg">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-          </a>
-        </div>
-        <div class="row">
-          <a href="games/drive-mad/">
-            <img src="images/drive-mad.jpg">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-            </a>
-        </div>
-        <div class="column">
-          <a href="games/moto-x3m/">
-            <img src="images/moto-x3m.jpg">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-          </a>
-          <a href="games/retro-bowl/">
-            <img src="images/retro-bowl.jpg">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
+        <h1>Patch Notes: Everything but JesterChat not fully working😥😅😆😂🤣💀💀</h1>
+        
             </div>
           </a>
         </div>
@@ -73,16 +33,24 @@
     </div>
 
     <div id="games">
-        <a href="games/JesterChat/"><img src="images/JesterChat.png" alt="JesterChat"></a>
-        <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
-        <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
-        <a href="games/"><img src="images/mc.png" alt="minecraft"></a>
-        <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
-        <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
-        <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
-        <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
-        <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
-     <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber"></a>
+        <a href="1/"><img src="1/favicon.ico" alt="1"></a>
+        <a href="10-minutes-till-dawn/"><img src="10-minutes-till-dawn/icon.png" alt="10 minutes till dawn"></a>
+        <a href="100ng/"><img src="100ng/100ng-logo.png" alt="100ng"></a>
+        <a href="1v1lol/"><img src="1v1lol/splash.png" alt="1v1lol"></a>
+        <a href="1v1space/"><img src="1v1space/splash.png" alt="1v1space"></a>
+        <a href="2020-game/"><img src="2020-game/icon.jpeg" alt="2020 Game"></a>
+        <a href="2048-multitask/"><img src="images/drive-mad.jpg" alt="2048 Multitask"></a>
+        <a href="2048/"><img src="images/slope.jpg" alt="2048"></a>
+        <a href="8ball-billards-classic/"><img src="images/motox3m2.jpg" alt="8Ball"></a>
+     <a href="9007199254740992/"><img src="9007199254740992/logo-4.png" alt="9007199254740992"></a>
+        <a href="DogeMiner/"><img src="/" alt="DogeMiner"></a>
+        <a href="FullScreenMario/Source/"><img src="FullScreenMario/Source/smm.png" alt="Super Mario Maker"></a>
+        <a href="HexGL/"><img src="/" alt="HexGL"></a>
+        <a href="OfflineParadise/"><img src="/" alt="Offline Paradise"></a>
+        <a href="Stickman-Survival/"><img src="/" alt="Stickman Survival"></a>
+        <a href="achievementunlocked/"><img src="/" alt="achievementunlocked"></a>
+        <a href="adarkroom/"><img src="/" alt="adarkroom"></a>
+        
     </div>
     </div>
 </body>
