--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -34,7 +34,7 @@
 
     <div id="games">
         <a href="1/"><img src="1/favicon.ico" alt="1"></a>
-        <a href="10-minutes-till-dawn/"><img src="10-minutes-till-dawn/icon.png" alt="10 minutes till dawn"></a>
+        <a href="10-minutes-till-dawn/"><img src="10-minutes-till-dawn/splash.png" alt="10 minutes till dawn"></a>
         <a href="100ng/"><img src="100ng/100ng-logo.png" alt="100ng"></a>
         <a href="1v1lol/"><img src="1v1lol/splash.png" alt="1v1lol"></a>
         <a href="1v1space/"><img src="1v1space/splash.png" alt="1v1space"></a>
@@ -50,6 +50,11 @@
         <a href="Stickman-Survival/"><img src="/" alt="Stickman Survival"></a>
         <a href="achievementunlocked/"><img src="/" alt="achievementunlocked"></a>
         <a href="adarkroom/"><img src="/" alt="adarkroom"></a>
+        <a href="adrenalinechallenge/"><img src="/" alt="Adrenaline Challenge"></a>
+        <a href="tanuki-sunset/"><img src="tanuki-sunset/img/logo.png" alt="Tanuki Sunset"></a>
+        <a href="temple-run-2/"><img src="/" alt="Temple Run"></a>
+        <a href="age-of-war/"><img src="/" alt="Age Of War"></a>
+        <a href="alien-invaders-io/"><img src="/" alt=""></a>
         
     </div>
     </div>
