--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -39,22 +39,23 @@
         <a href="1v1lol/"><img src="1v1lol/splash.png" alt="1v1lol"></a>
         <a href="1v1space/"><img src="1v1space/splash.png" alt="1v1space"></a>
         <a href="2020-game/"><img src="2020-game/icon.jpeg" alt="2020 Game"></a>
-        <a href="2048-multitask/"><img src="images/drive-mad.jpg" alt="2048 Multitask"></a>
-        <a href="2048/"><img src="images/slope.jpg" alt="2048"></a>
-        <a href="8ball-billards-classic/"><img src="images/motox3m2.jpg" alt="8Ball"></a>
+        <a href="2048-multitask/"><img src="2048-multitask/splash.png" alt="2048 Multitask"></a>
+        <a href="2048/"><img src="2048/thumb.png" alt="2048"></a>
+        <a href="8ball-billards-classic/"><img src="8ball-billards-classic/icon.png" alt="8Ball"></a>
      <a href="9007199254740992/"><img src="9007199254740992/logo-4.png" alt="9007199254740992"></a>
-        <a href="DogeMiner/"><img src="/" alt="DogeMiner"></a>
+        <a href="DogeMiner/"><img src="Dogeminer/img/dogecoin-d.png" alt="DogeMiner"></a>
         <a href="FullScreenMario/Source/"><img src="FullScreenMario/Source/smm.png" alt="Super Mario Maker"></a>
-        <a href="HexGL/"><img src="/" alt="HexGL"></a>
-        <a href="OfflineParadise/"><img src="/" alt="Offline Paradise"></a>
-        <a href="Stickman-Survival/"><img src="/" alt="Stickman Survival"></a>
-        <a href="achievementunlocked/"><img src="/" alt="achievementunlocked"></a>
-        <a href="adarkroom/"><img src="/" alt="adarkroom"></a>
-        <a href="adrenalinechallenge/"><img src="/" alt="Adrenaline Challenge"></a>
+        <a href="HexGL/"><img src="HexGL/" alt="HexGL"></a>
+        <a href="OfflineParadise/"><img src="OfflineParadise/" alt="Offline Paradise"></a>
+        <a href="Stickman-Survival/"><img src="Stickman-Survival/" alt="Stickman Survival"></a>
+        <a href="achievementunlocked/"><img src="achievementunlocked/" alt="achievementunlocked"></a>
+        <a href="adarkroom/"><img src="adarkroom/" alt="adarkroom"></a>
+        <a href="adrenalinechallenge/"><img src="adrenalinechallenge/" alt="Adrenaline Challenge"></a>
         <a href="tanuki-sunset/"><img src="tanuki-sunset/img/logo.png" alt="Tanuki Sunset"></a>
-        <a href="temple-run-2/"><img src="/" alt="Temple Run"></a>
-        <a href="age-of-war/"><img src="/" alt="Age Of War"></a>
-        <a href="alien-invaders-io/"><img src="/" alt=""></a>
+        <a href="temple-run-2/"><img src="temple-run-2/" alt="Temple Run"></a>
+        <a href="age-of-war/"><img src="age-of-war/" alt="Age Of War"></a>
+        <a href="alien-invaders-io/"><img src="alien-invaders-io/" alt="Alien Invaders io"></a>
+        <a href=" among-us /"><img src=" among-us /" alt="Among us"></a>
         
     </div>
     </div>
