--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -45,17 +45,23 @@
      <a href="9007199254740992/"><img src="9007199254740992/logo-4.png" alt="9007199254740992"></a>
         <a href="DogeMiner/"><img src="Dogeminer/img/dogecoin-d.png" alt="DogeMiner"></a>
         <a href="FullScreenMario/Source/"><img src="FullScreenMario/Source/smm.png" alt="Super Mario Maker"></a>
-        <a href="HexGL/"><img src="HexGL/" alt="HexGL"></a>
-        <a href="OfflineParadise/"><img src="OfflineParadise/" alt="Offline Paradise"></a>
-        <a href="Stickman-Survival/"><img src="Stickman-Survival/" alt="Stickman Survival"></a>
-        <a href="achievementunlocked/"><img src="achievementunlocked/" alt="achievementunlocked"></a>
-        <a href="adarkroom/"><img src="adarkroom/" alt="adarkroom"></a>
-        <a href="adrenalinechallenge/"><img src="adrenalinechallenge/" alt="Adrenaline Challenge"></a>
+        <a href="HexGL/"><img src="HexGL/icon.png" alt="HexGL"></a>
+        <a href="OfflineParadise/"><img src="OfflineParadise/assets/icon.jpeg" alt="Offline Paradise"></a>
+        <a href="Stickman-Survival/"><img src="Stickman-Survival/icon.png" alt="Stickman Survival"></a>
+        <a href="achievementunlocked/"><img src="achievementunlocked/achievementunlocked.png" alt="Achievement Unlocked"></a>
+        <a href="adarkroom/"><img src="adarkroom/splash.png" alt="adarkroom"></a>
+        <a href="adrenalinechallenge/"><img src="adrenalinechallenge/adrenalinechallenge.jpg" alt="Adrenaline Challenge"></a>
         <a href="tanuki-sunset/"><img src="tanuki-sunset/img/logo.png" alt="Tanuki Sunset"></a>
-        <a href="temple-run-2/"><img src="temple-run-2/" alt="Temple Run"></a>
-        <a href="age-of-war/"><img src="age-of-war/" alt="Age Of War"></a>
-        <a href="alien-invaders-io/"><img src="alien-invaders-io/" alt="Alien Invaders io"></a>
-        <a href=" among-us /"><img src=" among-us /" alt="Among us"></a>
+        <a href="temple-run-2/"><img src="temple-run-2/tr2.jpg" alt="Temple Run"></a>
+        <a href="age-of-war/"><img src="age-of-war/icon.jpg" alt="Age Of War"></a>
+        <a href="alien-invaders-io/"><img src="alien-invaders-io/unnamed.png" alt="Alien Invaders io"></a>
+        <a href="among-us/"><img src="among-us/red.png" alt="Among us"></a>
+        <a href="fridaynightfunkin/"><img src="fridaynightfunkin/fnf-icon.jpg" alt="Friday Night Funkin"></a>
+        <a href="fnaf1/"><img src="fnaf1/splash.jpg" alt="Five Nights At Freddys 1"></a>
+        <a href="fnaf2/"><img src="fnaf2/splash.jpg" alt="Five Nights At Freddys 2"></a>
+        <a href="fnaf3/"><img src="fnaf3/splash.jpg" alt="Five Nights At Freddys 3"></a>
+        <a href="fnaf4/"><img src="fnaf4/spladh.jpg" alt="Five Nights At Freddys 4"></a>
+        <a href="flood-runner-2/"><img src="flood-runner-2/download.jpeg" alt="Flood runner 2"></a>
         
     </div>
     </div>
