--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <img src="images/logo.png" alt="logo">
-        <h1>epic jester chat</h1>
+        <h1>epic jester gaymer10010!1!1!!1!1100101</h1>
     </nav>
 
     <div class="featured">
