--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -43,10 +43,10 @@
         <a href="2048/"><img src="2048/thumb.png" alt="2048"></a>
         <a href="8ball-billards-classic/"><img src="8ball-billards-classic/icon.png" alt="8Ball"></a>
      <a href="9007199254740992/"><img src="9007199254740992/logo-4.png" alt="9007199254740992"></a>
-        <a href="DogeMiner/"><img src="Dogeminer/img/dogecoin-d.png" alt="DogeMiner"></a>
+        <a href="DogeMiner/"><img src="DogeMiner/img/dogecoin-d.png" alt="DogeMiner"></a>
         <a href="HexGL/"><img src="HexGL/icon.png" alt="HexGL"></a>
         <a href="OfflineParadise/"><img src="OfflineParadise/assets/icon.jpeg" alt="Offline Paradise"></a>
-        <a href="Stickman-Survival/"><img src="Stickman-Survival/icon.png" alt="Stickman Survival"></a>
+        <a href="Stickman-Survival/"><img src="Stickman-Survival/Icon.png" alt="Stickman Survival"></a>
         <a href="achievementunlocked/"><img src="achievementunlocked/achievementunlocked.png" alt="Achievement Unlocked"></a>
         <a href="adarkroom/"><img src="adarkroom/splash.png" alt="adarkroom"></a>
         <a href="adrenalinechallenge/"><img src="adrenalinechallenge/adrenalinechallenge.jpg" alt="Adrenaline Challenge"></a>
@@ -59,8 +59,29 @@
         <a href="fnaf1/"><img src="fnaf1/splash.jpg" alt="Five Nights At Freddys 1"></a>
         <a href="fnaf2/"><img src="fnaf2/splash.jpg" alt="Five Nights At Freddys 2"></a>
         <a href="fnaf3/"><img src="fnaf3/splash.jpg" alt="Five Nights At Freddys 3"></a>
-        <a href="fnaf4/"><img src="fnaf4/spladh.jpg" alt="Five Nights At Freddys 4"></a>
+        <a href="fnaf4/"><img src="fnaf4/splash.jpg" alt="Five Nights At Freddys 4"></a>
         <a href="flood-runner-2/"><img src="flood-runner-2/download.jpeg" alt="Flood runner 2"></a>
+        <a href="craftmine/"><img src="craftmine/images/craftmine.png" alt="CraftMine"></a>
+        <a href="glass-city/"><img src="glass-city/image.png" alt="Glass City"></a>
+        <a href="frying-nemo/"><img src="frying-nemo/icon.png" alt="Frying Nemo"></a>
+        <a href="generic-fishing-game/"><img src="generic-fishing-game/icon.png" alt="Generic Fishing Game"></a>
+        <a href="getaway-shootout/"><img src="getaway-shootout/icon.jpg" alt="Getaway Shootout"></a>
+        <a href="crossyroad/"><img src="crossyroad/crossyroad.png" alt="Crossy Road"></a>
+<a href="crowd city 2/"><img src="crowd city 2/logo.jpg" alt="Crowd City 2"></a>
+        <a href="csgo-clicker/"><img src="csgo-clicker/images/case1.png" alt="Counter Strike Clicker"></a>
+        <a href="ctr-holiday/"><img src="ctr-holiday/images/page/snap-logo.png" alt="Cut The Rope"></a>
+        <a href="dante/"><img src="dante/spash.png" alt="Dante"></a>
+        <a href="dodge/"><img src="dodge/icon.png" alt="Dodge"></a>
+<a href="fake-virus/"><img src="fake-virus/icon.png" alt="Fake Virus"></a>
+        <a href="happyhop/"><img src="happyhop/splash.png" alt="Happy Hop"></a>
+        <a href="hba/"><img src="hba/hoverbotarena.JPG" alt="Hover Bot Arena"></a>
+        <a href="madalin-stunt-cars-2/"><img src="madalin-stunt-cars-2/img/logo.jpg" alt="Madalin Stunt Cars 2"></a>
+<a href="madalin-stunt-cars-3/"><img src="madalin-stunt-cars-3/" alt="Madalin Stunt Cars 3"></a>
+        <a href="mario/"><img src="mario/icon.png" alt="Super Mario Maker"></a>
+        <a href="marvinspectrum/"><img src="marvinspectrum/marvinspectrum.png" alt="Marvin Spectrum"></a>
+        <a href="matrixrampage/"><img src="matrixrampage/matrixrampage.jpg" alt="Matrix Rampage"></a>
+
+        
         
     </div>
     </div>
