--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -34,6 +34,7 @@
 
     <div id="games">
         <a href="1/"><img src="1/favicon.ico" alt="1"></a>
+        <a href="retrobowl/"><img src="retrobowl/retro-bowl-main/img/icon.jpg" alt="Retro Bowl"></a>
         <a href="10-minutes-till-dawn/"><img src="10-minutes-till-dawn/splash.png" alt="10 minutes till dawn"></a>
         <a href="100ng/"><img src="100ng/100ng-logo.png" alt="100ng"></a>
         <a href="1v1lol/"><img src="1v1lol/splash.png" alt="1v1lol"></a>
@@ -80,8 +81,10 @@
         <a href="mario/"><img src="mario/icon.png" alt="Super Mario Maker"></a>
         <a href="marvinspectrum/"><img src="marvinspectrum/marvinspectrum.png" alt="Marvin Spectrum"></a>
         <a href="matrixrampage/"><img src="matrixrampage/matrixrampage.jpg" alt="Matrix Rampage"></a>
-
-        
+<a href="my-friend-pedro/"><img src="my-friend-pedro/images.jpeg" alt="My Friend Pedro"></a>
+        <a href="minecraft/"><img src="minecraft/splash.jpeg" alt="Minecraft"></a>
+        <a href="ovo/"><img src="ovo/ovo.png" alt="OvO"></a>
+        <a href="portalflash/"><img src="portalflash/portaltheflashversion.jpg" alt="Portal"></a>
         
     </div>
     </div>
