--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -85,6 +85,11 @@
         <a href="minecraft/"><img src="minecraft/splash.jpeg" alt="Minecraft"></a>
         <a href="ovo/"><img src="ovo/ovo.png" alt="OvO"></a>
         <a href="portalflash/"><img src="portalflash/portaltheflashversion.jpg" alt="Portal"></a>
+        <a href="you-are-bezos/"><img src="you-are-bezos/icon.png" alt="You Are Bezos"></a>
+        <a href="wordle/"><img src="wordle/img/logo_512x512.png" alt="Wordle"></a>
+        <a href="wolf3d/"><img src="wolf3d/art/wolf3d.png" alt="Wolf3D"></a>
+        <a href="webretro/><img src="webretro/assets/icons/icon204.png" alt="Webtro Arch"></a>
+        <a href="gamename/"><img src="gamenane/pathtoimage" alt=""></a>
         
     </div>
     </div>
