--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -33,6 +33,8 @@
     </div>
 
     <div id="games">
+        <a href="slope/"><img src="slope/slope4.jpeg" alt="Slope"></a>
+        <a href="slope2/"><img src="slope/slope4.jpeg" alt="Slope 2"></a>
         <a href="1/"><img src="1/favicon.ico" alt="1"></a>
         <a href="retrobowl/"><img src="retrobowl/retro-bowl-main/img/icon.jpg" alt="Retro Bowl"></a>
         <a href="10-minutes-till-dawn/"><img src="10-minutes-till-dawn/splash.png" alt="10 minutes till dawn"></a>
@@ -78,7 +80,7 @@
         <a href="hba/"><img src="hba/hoverbotarena.JPG" alt="Hover Bot Arena"></a>
         <a href="madalin-stunt-cars-2/"><img src="madalin-stunt-cars-2/img/logo.jpg" alt="Madalin Stunt Cars 2"></a>
 <a href="madalin-stunt-cars-3/"><img src="madalin-stunt-cars-3/" alt="Madalin Stunt Cars 3"></a>
-        <a href="mario/"><img src="mario/icon.png" alt="Super Mario Maker"></a>
+        <a href="super-mario-maker-online/"><img src="super-mario-maker-online/icon.png" alt="Super Mario Maker"></a>
         <a href="marvinspectrum/"><img src="marvinspectrum/marvinspectrum.png" alt="Marvin Spectrum"></a>
         <a href="matrixrampage/"><img src="matrixrampage/matrixrampage.jpg" alt="Matrix Rampage"></a>
 <a href="my-friend-pedro/"><img src="my-friend-pedro/images.jpeg" alt="My Friend Pedro"></a>
@@ -89,8 +91,28 @@
         <a href="wordle/"><img src="wordle/img/logo_512x512.png" alt="Wordle"></a>
         <a href="wolf3d/"><img src="wolf3d/art/wolf3d.png" alt="Wolf3D"></a>
         <a href="webretro/><img src="webretro/assets/icons/icon204.png" alt="Webtro Arch"></a>
-        <a href="gamename/"><img src="gamenane/pathtoimage" alt=""></a>
-        
+        <a href="twitch-tetris/"><img src="twitch-tetris/logo.png" alt="Twitch Tetris"></a>
+      <a href="tv-static/"><img src="tv-static/station.png" alt="TV Static"></a>
+        <a href="tiny-fishing/"><img src="tiny-fishing/html5game/bg.png" alt="Tiny Fishing"></a>
+        <a href="thisistheonlylevel/"><img src="thisistheonlylevel/thisistheonlylevel.png" alt="This is the only level"></a>
+        <a href="there-is-no-game/"><img src="there-is-no-game/logo.png" alt="There is no game"></a>
+        <a href="superhot/"><img src="superhot/hot.jpg" alt="SuperHot"></a>
+        <a href="superhero-io/"><img src="superhero-io/fbcdn/avatar.png" alt="Superhero.io"></a>
+        <a href="super-puffer-fish-3d/"><img src="super-puffer-fish-3d/assets/img/labels.png" alt="Super Puffer Fish 3D"></a>
+        <a href="subway-surfers/"><img src="subway-surfers/img/splash.jpg" alt="Subway Surfers"></a>
+        <a href="stormthehouse2/"><img src="stormthehouse2/stormthehouse2.png" alt="Storm The House 2"></a>
+        <a href="stickwar/"><img src="stickwar/stickwar.jpg" alt="Stickwar"></a>
+        <a href="stickman-golf/"><img src="stickman-golf/splash.png" alt="Stickman Golf"></a>
+        <a href="stickman-epic-battle/"><img src="stickman-epic-battle/style/favicon.ico" alt="Stickman Battle"></a>
+        <a href="stickman-dismount/"><img src="stickman-dismount/style/favicon.ico" alt="Stickman Dismount"></a>
+        <a href="stealingthediamond/"><img src="stealingthediamond/stealingthediamond.jpg" alt="Stealing The Diamond"></a>
+        <a href="station-141/"><img src="station-141/icon.png" alt="Station 141"></a>
+        <a href="spacecompany/"><img src="spacecompany/SpaceCompanyFavicon.png" alt="Space Company"></a>
+        <a href="sonic-the-hedgehog/"><img src="sonic-the-hedgehog/pathtoimage" alt="Sonic The Hedgehog"></a>
+        <a href="sort-the-court/"><img src="sort-the-court/img/splash.png" alt="Sort The Court"></a>
+        <a href="soundboard/"><img src="soundboard/img/mlg.png" alt="Soundboard"></a>
+        <a href="sm64/"><img src="sm64/logompng" alt="Super Mario 64"></a>
+        <a href="smashkarts/"><img src="smashkarts/images/favicon.png" alt="Smash Karts"></a>
     </div>
     </div>
 </body>
