--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -73,13 +73,13 @@
 <a href="crowd city 2/"><img src="crowd city 2/logo.jpg" alt="Crowd City 2"></a>
         <a href="csgo-clicker/"><img src="csgo-clicker/images/case1.png" alt="Counter Strike Clicker"></a>
         <a href="ctr-holiday/"><img src="ctr-holiday/images/page/snap-logo.png" alt="Cut The Rope"></a>
-        <a href="dante/"><img src="dante/spash.png" alt="Dante"></a>
+        <a href="dante/"><img src="dante/splash.png" alt="Dante"></a>
         <a href="dodge/"><img src="dodge/icon.png" alt="Dodge"></a>
 <a href="fake-virus/"><img src="fake-virus/icon.png" alt="Fake Virus"></a>
-        <a href="happyhop/"><img src="happyhop/splash.png" alt="Happy Hop"></a>
+        <a href="happy-hop/"><img src="happy-hop/splash.png" alt="Happy Hop"></a>
         <a href="hba/"><img src="hba/hoverbotarena.JPG" alt="Hover Bot Arena"></a>
         <a href="madalin-stunt-cars-2/"><img src="madalin-stunt-cars-2/img/logo.jpg" alt="Madalin Stunt Cars 2"></a>
-<a href="madalin-stunt-cars-3/"><img src="madalin-stunt-cars-3/" alt="Madalin Stunt Cars 3"></a>
+<a href="madalin-stunt-cars-3/"><img src="madalin-stunt-cars-3/img/index.jpg" alt="Madalin Stunt Cars 3"></a>
         <a href="super-mario-maker-online/"><img src="super-mario-maker-online/icon.png" alt="Super Mario Maker"></a>
         <a href="marvinspectrum/"><img src="marvinspectrum/marvinspectrum.png" alt="Marvin Spectrum"></a>
         <a href="matrixrampage/"><img src="matrixrampage/matrixrampage.jpg" alt="Matrix Rampage"></a>
@@ -87,32 +87,43 @@
         <a href="minecraft/"><img src="minecraft/splash.jpeg" alt="Minecraft"></a>
         <a href="ovo/"><img src="ovo/ovo.png" alt="OvO"></a>
         <a href="portalflash/"><img src="portalflash/portaltheflashversion.jpg" alt="Portal"></a>
-        <a href="you-are-bezos/"><img src="you-are-bezos/icon.png" alt="You Are Bezos"></a>
+        <a href="you-are-bezos/"><img src="you-are-bezos/img/icon.png" alt="You Are Bezos"></a>
         <a href="wordle/"><img src="wordle/img/logo_512x512.png" alt="Wordle"></a>
         <a href="wolf3d/"><img src="wolf3d/art/wolf3d.png" alt="Wolf3D"></a>
         <a href="webretro/><img src="webretro/assets/icons/icon204.png" alt="Webtro Arch"></a>
         <a href="twitch-tetris/"><img src="twitch-tetris/logo.png" alt="Twitch Tetris"></a>
-      <a href="tv-static/"><img src="tv-static/station.png" alt="TV Static"></a>
+      <a href="tv-static/"><img src="tv-static/static.png" alt="TV Static"></a>
         <a href="tiny-fishing/"><img src="tiny-fishing/html5game/bg.png" alt="Tiny Fishing"></a>
         <a href="thisistheonlylevel/"><img src="thisistheonlylevel/thisistheonlylevel.png" alt="This is the only level"></a>
         <a href="there-is-no-game/"><img src="there-is-no-game/logo.png" alt="There is no game"></a>
         <a href="superhot/"><img src="superhot/hot.jpg" alt="SuperHot"></a>
         <a href="superhero-io/"><img src="superhero-io/fbcdn/avatar.png" alt="Superhero.io"></a>
-        <a href="super-puffer-fish-3d/"><img src="super-puffer-fish-3d/assets/img/labels.png" alt="Super Puffer Fish 3D"></a>
+        <a href="super-puffer-fish-3d/"><img src="super-puffer-fish-3d/fish.png" alt="Super Puffer Fish 3D"></a>
         <a href="subway-surfers/"><img src="subway-surfers/img/splash.jpg" alt="Subway Surfers"></a>
-        <a href="stormthehouse2/"><img src="stormthehouse2/stormthehouse2.png" alt="Storm The House 2"></a>
+        <a href="stormthehouse2/"><img src="stormthehouse2/stormthehouse2.jpg" alt="Storm The House 2"></a>
         <a href="stickwar/"><img src="stickwar/stickwar.jpg" alt="Stickwar"></a>
         <a href="stickman-golf/"><img src="stickman-golf/splash.png" alt="Stickman Golf"></a>
-        <a href="stickman-epic-battle/"><img src="stickman-epic-battle/style/favicon.ico" alt="Stickman Battle"></a>
-        <a href="stickman-dismount/"><img src="stickman-dismount/style/favicon.ico" alt="Stickman Dismount"></a>
+        <a href="stickman-epic-battle/"><img src="stickman-epic-battle/style/favicon.png" alt="Stickman Battle"></a>
+        <a href="stickman-dismount/"><img src="stickman-dismount/style/favicon.png" alt="Stickman Dismount"></a>
         <a href="stealingthediamond/"><img src="stealingthediamond/stealingthediamond.jpg" alt="Stealing The Diamond"></a>
         <a href="station-141/"><img src="station-141/icon.png" alt="Station 141"></a>
         <a href="spacecompany/"><img src="spacecompany/SpaceCompanyFavicon.png" alt="Space Company"></a>
-        <a href="sonic-the-hedgehog/"><img src="sonic-the-hedgehog/pathtoimage" alt="Sonic The Hedgehog"></a>
+        <a href="sonic-the-hedgehog/"><img src="sonic-the-hedgehog/assets/imagesbackground.png" alt="Sonic The Hedgehog"></a>
         <a href="sort-the-court/"><img src="sort-the-court/img/splash.png" alt="Sort The Court"></a>
         <a href="soundboard/"><img src="soundboard/img/mlg.png" alt="Soundboard"></a>
-        <a href="sm64/"><img src="sm64/logompng" alt="Super Mario 64"></a>
+        <a href="sm64/"><img src="sm64/logo.png" alt="Super Mario 64"></a>
         <a href="smashkarts/"><img src="smashkarts/images/favicon.png" alt="Smash Karts"></a>
+        <a href="cluster-rush/"><img src="cluster-rush/splash.png" alt="Cluster Truck"></a>
+        <a href="backflip-dive-3d/"><img src="backflip-dive-3d/icon.jpeg" alt="Backflip Dive 3D"></a>
+        <a href="anti-terrorist-rush/"><img src="anti-terrorist-rush/icon.png" alt="Anti terrorist rush"></a>
+        <a href="backrooms/"><img src="backrooms/img/splash.jpg" alt="Backrooms"></a>
+        <a href="bitlife/"><img src="bitlife/logo.png" alt="bitlife"></a>
+        <a href="binding-of-isaac/"><img src="gamenane/pathtoimage" alt="Binding of isaac"></a>
+        <a href="bigredbutton/"><img src="bigredbutton/bigredbutton.png" alt="The big red button"></a>
+        <a href="basketball-legends-2020/"><img src="basketball-legends-2020/icon.png" alt="Hasketball Stars 2020"></a>
+        <a href="fancypantsadventures/"><img src="fancypantsadventures/fancyoantsadventure.png" alt="Fancy Pants Adventures"></a>
+        <a href="house-of-hazards/"><img src="house-of-hazards/thumbnail.jpg" alt="House of Hazards"></a>
+        
     </div>
     </div>
 </body>
