--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -90,7 +90,7 @@
         <a href="you-are-bezos/"><img src="you-are-bezos/img/icon.png" alt="You Are Bezos"></a>
         <a href="wordle/"><img src="wordle/img/logo_512x512.png" alt="Wordle"></a>
         <a href="wolf3d/"><img src="wolf3d/art/wolf3d.png" alt="Wolf3D"></a>
-        <a href="webretro/><img src="webretro/assets/icons/icon204.png" alt="Webtro Arch"></a>
+        <a href="webretro/"><img src="webretro/assets/icons/icon204.png" alt="Webtro Arch"></a>
         <a href="twitch-tetris/"><img src="twitch-tetris/logo.png" alt="Twitch Tetris"></a>
       <a href="tv-static/"><img src="tv-static/static.png" alt="TV Static"></a>
         <a href="tiny-fishing/"><img src="tiny-fishing/html5game/bg.png" alt="Tiny Fishing"></a>
