--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -108,7 +108,7 @@
         <a href="stealingthediamond/"><img src="stealingthediamond/stealingthediamond.jpg" alt="Stealing The Diamond"></a>
         <a href="station-141/"><img src="station-141/icon.png" alt="Station 141"></a>
         <a href="spacecompany/"><img src="spacecompany/SpaceCompanyFavicon.png" alt="Space Company"></a>
-        <a href="sonic-the-hedgehog/"><img src="sonic-the-hedgehog/assets/imagesbackground.png" alt="Sonic The Hedgehog"></a>
+        <a href="sonic-the-hedgehog/"><img src="sonic-the-hedgehog/sanic.png" alt="Sonic The Hedgehog"></a>
         <a href="sort-the-court/"><img src="sort-the-court/img/splash.png" alt="Sort The Court"></a>
         <a href="soundboard/"><img src="soundboard/img/mlg.png" alt="Soundboard"></a>
         <a href="sm64/"><img src="sm64/logo.png" alt="Super Mario 64"></a>
@@ -118,10 +118,10 @@
         <a href="anti-terrorist-rush/"><img src="anti-terrorist-rush/icon.png" alt="Anti terrorist rush"></a>
         <a href="backrooms/"><img src="backrooms/img/splash.jpg" alt="Backrooms"></a>
         <a href="bitlife/"><img src="bitlife/logo.png" alt="bitlife"></a>
-        <a href="binding-of-isaac/"><img src="gamenane/pathtoimage" alt="Binding of isaac"></a>
+        <a href="binding-of-isaac/"><img src="gamenane/stopit.jpeg" alt="Binding of isaac"></a>
         <a href="bigredbutton/"><img src="bigredbutton/bigredbutton.png" alt="The big red button"></a>
         <a href="basketball-legends-2020/"><img src="basketball-legends-2020/icon.png" alt="Hasketball Stars 2020"></a>
-        <a href="fancypantsadventures/"><img src="fancypantsadventures/fancyoantsadventure.png" alt="Fancy Pants Adventures"></a>
+        <a href="fancypantsadventures/"><img src="fancypantsadventures/fancypantsadventure.png" alt="Fancy Pants Adventures"></a>
         <a href="house-of-hazards/"><img src="house-of-hazards/thumbnail.jpg" alt="House of Hazards"></a>
         
     </div>
