--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -59,7 +59,7 @@
         <a href="alien-invaders-io/"><img src="alien-invaders-io/unnamed.png" alt="Alien Invaders io"></a>
         <a href="among-us/"><img src="among-us/red.png" alt="Among us"></a>
         <a href="fridaynightfunkin/"><img src="fridaynightfunkin/fnf-icon.jpg" alt="Friday Night Funkin"></a>
-        <a href="fnaf1/"><img src="fnaf1/splash.jpg" alt="Five Nights At Freddys 1"></a>
+        <a href="fnaf/"><img src="fnaf/splash.jpg" alt="Five Nights At Freddys 1"></a>
         <a href="fnaf2/"><img src="fnaf2/splash.jpg" alt="Five Nights At Freddys 2"></a>
         <a href="fnaf3/"><img src="fnaf3/splash.jpg" alt="Five Nights At Freddys 3"></a>
         <a href="fnaf4/"><img src="fnaf4/splash.jpg" alt="Five Nights At Freddys 4"></a>
