--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -118,7 +118,7 @@
         <a href="anti-terrorist-rush/"><img src="anti-terrorist-rush/icon.png" alt="Anti terrorist rush"></a>
         <a href="backrooms/"><img src="backrooms/img/splash.jpg" alt="Backrooms"></a>
         <a href="bitlife/"><img src="bitlife/logo.png" alt="bitlife"></a>
-        <a href="binding-of-isaac/"><img src="gamenane/stopit.jpeg" alt="Binding of isaac"></a>
+        <a href="binding-of-isaac/"><img src="binding-of-isaac/stopit.jpeg" alt="Binding of isaac"></a>
         <a href="bigredbutton/"><img src="bigredbutton/bigredbutton.png" alt="The big red button"></a>
         <a href="basketball-legends-2020/"><img src="basketball-legends-2020/icon.png" alt="Hasketball Stars 2020"></a>
         <a href="fancypantsadventures/"><img src="fancypantsadventures/fancypantsadventure.png" alt="Fancy Pants Adventures"></a>
