--- a/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvhoohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvhoohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvhoohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvhoohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
+++ b/oohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvhoohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvhoohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvhoohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvhoohmygodambatukanoohhhooooiifhfhddjcdffdkguhefshvjgufvhvh.html
@@ -53,7 +53,7 @@
         <a href="achievementunlocked/"><img src="achievementunlocked/achievementunlocked.png" alt="Achievement Unlocked"></a>
         <a href="adarkroom/"><img src="adarkroom/splash.png" alt="adarkroom"></a>
         <a href="adrenalinechallenge/"><img src="adrenalinechallenge/adrenalinechallenge.jpg" alt="Adrenaline Challenge"></a>
-        <a href="tanuki-sunset/"><img src="tanuki-sunset/img/logo.png" alt="Tanuki Sunset"></a>
+        <a href="kart-fight-io/"><img src="kart-fight-io/icon.jpg" alt="KartFight.io"></a>
         <a href="temple-run-2/"><img src="temple-run-2/tr2.jpg" alt="Temple Run"></a>
         <a href="age-of-war/"><img src="age-of-war/icon.jpg" alt="Age Of War"></a>
         <a href="alien-invaders-io/"><img src="alien-invaders-io/unnamed.png" alt="Alien Invaders io"></a>
@@ -121,7 +121,11 @@
         <a href="basketball-legends-2020/"><img src="basketball-legends-2020/icon.png" alt="Hasketball Stars 2020"></a>
         <a href="fancypantsadventures/"><img src="fancypantsadventures/fancypantsadventure.png" alt="Fancy Pants Adventures"></a>
         <a href="house-of-hazards/"><img src="house-of-hazards/thumbnail.jpg" alt="House of Hazards"></a>
-        
+        <a href="aspiring-artist/"><img src="aspiring-artist/icon.png" alt="Spring Artist"></a>
+        <a href="gimmie-the-airpod/"><img src="gimmie-the-airpod/icon.png" alt="Gimmie The Airpod"></a>
+        <a href="ducklife2/"><img src="ducklife2/ducklife2.png" alt="Duck Life 2"></a>
+        <a href="ducklife3/"><img src="ducklife3/duck.png" alt="Duck Life 3"></a>
+        <a href="run3/"><img src="run3/favicon.png" alt="Run 3"></a>
     </div>
     </div>
 </body>
