--- a/thehackersarebacktohauntmeyshgfvdbdfcbdgfb.html
+++ b/thehackersarebacktohauntmeyshgfvdbdfcbdgfb.html
@@ -96,7 +96,7 @@
         <a href="superhot/"><img src="superhot/hot.jpg" alt="SuperHot"></a>
         <a href="superhero-io/"><img src="superhero-io/fbcdn/avatar.png" alt="Superhero.io"></a>
         <a href="super-puffer-fish-3d/"><img src="super-puffer-fish-3d/spf3d.png" alt="Super Puffer Fish 3D"></a>
-        <a href="subway-surfers/"><img src="subway-surfers/img/splash.jpg" alt="Subway Surfers"></a>
+        <a href="subway-surfers-bali/"><img src="subway-surfers-bali/assets/preload/splash_mip.png" alt="Subway Surfers"></a>
         <a href="stormthehouse2/"><img src="stormthehouse2/stormthehouse2.jpg" alt="Storm The House 2"></a>
         <a href="stickwar/"><img src="stickwar/stickwar.jpg" alt="Stickwar"></a>
         <a href="stickman-golf/"><img src="stickman-golf/splash.png" alt="Stickman Golf"></a>
