--- a/soundboard/index.html
+++ b/soundboard/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" sizes="192x192" href="img/mlg-favicon.png" />
     <link rel="shortcut icon" href="img/mlg-favicon.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="img/mlg-favicon.png" type="image/x-icon" />
-    <title>Soundboard | 3kh0</title>
+    <title>Soundboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta content="https://3kh0.github.io/" property="og:url" />
     <meta content="img/mlg.png" property="og:image" />
@@ -57,6 +57,18 @@
           <p class="name">
             <button class="download" onclick="window.location.href='sounds/fart.mp3'">Download</button><br />
             Fart
+          </p>
+          </div>
+      </div>
+      <div>
+        <div class="sound">
+          <div class="circle small-button-background" style="background-color: #694729;"></div>
+          <audio id="fart-with-reverb" src="sounds/fart-with-reverb.mp3" preload="auto"></audio>
+          <button class="small-button" onclick="document.getElementById('nigga').play();"></button>
+          <div class="small-button-shadow"></div>
+          <p class="name">
+            <button onclick="window.location.href='sounds/nigga.mp3'">Download</button><br />
+            DONT PLAY THIS ON FULL VOLUME<br />
           </p>
         </div>
       </div>
